Replace noisy-future with customized executors